service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  labels:
    api: wordpress
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    tier: frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort:
