ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: word-ingress
spec:
  rules:
  - host: your-domain.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wordpress
          servicePort: 80
